# ISEL-LEIM-IASA

./: .gitignore  .gitmodules  README.md  notes.md
Projects/p3/: notes.md  pyproject.toml
Projects/p3/src/p3/: test_deliberative.py  test_markov.py  test_psa.py  test_reactive.py  test_reinforcement_learning.py
Projects/p3/src/p3/agent/: __init__.py  control.py  prospector_agent.py
Projects/p3/src/p3/agent/controls/: __init__.py  deliberative_control.py  reactive_control.py  reinforcement_learning_control.py
Projects/p3/src/p3/agent/deliberative_control/: deliberative_control.py  move_operator.py  world_model.py
Projects/p3/src/p3/agent/reactive_control/: reactive_control.py
Projects/p3/src/p3/agent/reinforcement_learning_control/: learning_mechanism.py  reinforcement_learning_control.py
Projects/p3/src/p3/ecr/: __init__.py  behaviour.py  complex_behaviour.py  hierarchy.py  priority.py  reaction.py  response.py
Projects/p3/src/p3/learning/: __init__.py  action_selection.py  learning_memory.py  reinforcement_learning.py
Projects/p3/src/p3/learning/mechanisms/: q_learning.py  qe_learning.py
Projects/p3/src/p3/learning/memories/: sparse_memory.py
Projects/p3/src/p3/learning/selections/: greedy.py
Projects/p3/src/p3/mdp/: __init__.py  mdp.py  mdp_model.py
Projects/p3/src/p3/pee/larg/: procura_larg.py
Projects/p3/src/p3/pee/mecproc/: mecanismo_procura.py  (+3 more)
Projects/p3/src/p3/planner/: __init__.py  model_planner.py  planner.py
Projects/p3/src/p3/psa/: vissim.py  visualizador.py
Projects/p3/src/p3/reinforcement_learning/: reinforcement_learning.py
(+338 files in other folders)
