[tool.poetry]
name = "p3"
version = "1.0.0"
description = ""
authors = [
	"Andre Fonseca",
	"Daniel Santos"
]

[tool.poetry.dependencies]
python = "~3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
