[tool.poetry]
name = "p3"
version = "1.0.0"
description = ""
authors = [
	"Andre Fonseca",
	"Daniel Santos"
]

[tool.poetry.dependencies]
python = "~3.6.9"
psa = {git = "git@github.com:andrewfonseca/ISEL-LEIM-IASA-PSA.git"}
pee = {git = "git@github.com:andrewfonseca/ISEL-LEIM-IASA-PEE.git"}

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
